fix grid gap

--- a/indians/static/scss/components/team-browser.scss
+++ b/indians/static/scss/components/team-browser.scss
@@ -3,8 +3,7 @@
   grid-column-start: 1;
   grid-column-end: 13;
   grid-template-columns: repeat(auto-fit, 220px);
-  grid-template-rows: repeat(auto-fill,300px);
-  grid-gap: 10px;
+  grid-gap: 20px;
   justify-content: space-evenly;
   margin-bottom: 40px;
 
@@ -51,7 +50,7 @@
 
     h3 {
       font-family: $encode-sans;
-      font-size: $text-small;
+      font-size: 12px;
       text-transform: uppercase;
       letter-spacing: 3px;
       color: white;
